# mint-verdaccio-manager

./: .gitignore  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml
scripts/: prepare-runtime.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tools/: mod.rs  packages.rs  settings.rs  users.rs  verdaccio.rs
src/assets/: index.css
src/lib/: api.ts  useColorScheme.ts
src/pages/: CachedPackages.tsx  Config.tsx  Dashboard.tsx  Logs.tsx  Packages.tsx  Settings.tsx  Users.tsx  index.tsx
src/types/: enum.ts  index.ts
